--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,3 +1,11 @@
+@import '../../node_modules/bulma/sass/utilities/_all';
+@import '../../node_modules/bulma/sass/base/_all';
+@import '../../node_modules/bulma/sass/components/_all';
+@import '../../node_modules/bulma/sass/grid/_all';
+@import '../../node_modules/bulma/sass/layout/_all';
+@import '../../node_modules/bulma/sass/elements/_all';
+@import '../../node_modules/font-awesome/css/font-awesome.min.css';
+
 #app {
   background: gray;
   min-height: 90vh;
